feat: add recurrence qeue

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "runtimeExecutable": "/opt/homebrew/bin/npm",
       "runtimeArgs": [
         "run",
-        "test:debug",
+        "dev",
       ],
       "skipFiles": [
         "<node_internals>/**"
